Changed to a lower quality image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="header_right">
         <div class="header_right_img_container">
-          <img class="pri" src="./images/pri.png" alt="Pri not found" />
+          <img class="pri" src="./images/pritam.png" alt="Pri not found" />
           <div class="circle"></div>
         </div>
       </div>
