added experience section

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   <body>
     <nav>
       <ul>
-        <li class="nav_li"><a href="#home">Home</a></li>
-
+        <li class="nav_li"><a href="#home"> Home</a></li>
         <li class="nav_li"><a href="#about"> About</a></li>
+        <li class="nav_li"><a href="#experience">Experience </a></li>
 
         <li class="nav_li"><a href="#service">Service</a></li>
 
@@ -67,13 +67,44 @@
       <div class="about_head"><h1>About me</h1></div>
       <div class="about_text">
         <p>
-          I am Pritam debnath . lives in kolkata , India . I am
+          Lives in kolkata , India . I am
           <span class="orange">self-taught</span> front-end web developer
           looking for a <span class="orange">freelance</span> work . I will love
           work remotely and have experience in remote teams .
         </p>
       </div>
     </article>
+
+    <section id="experience">
+      <h1>Experience</h1>
+      <div class="organisation">
+        <div class="organisation_details">
+          <a
+            class="organisation_details_img"
+            href="https://www.linkedin.com/company/hsvdigital/"
+          >
+            <img src="./images/hsv-digital-logo.jpeg" alt="hsv-digital-logo" />
+          </a>
+          <div class="organisation_details_time">
+            <h3>Frontend Web Developer</h3>
+            <p>HSV Digital · Internship</p>
+            <p>Jul 2022 - Oct 2022 · 4 months</p>
+          </div>
+        </div>
+        <div class="organisation_projects">
+          <h3>Projects that I have contributed to -</h3>
+          <p>
+            <span class="bold">Grorapid</span> -B2B SAAS product to grow
+            businesses .
+          </p>
+          <p>
+            <span class="bold">Buydesk</span> - B2B SAAS Platform which helps
+            businesses to handle procurement from suppliers by raising RFQs and
+            managing them from a single platform .
+          </p>
+        </div>
+      </div>
+    </section>
 
     <article id="service">
       <h1>Service</h1>
