--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
+    <!-- link to fav icon -->
+    <link rel="icon" type="image/png"  href="./images/fav-icon.ico" sizes="16x16"/>
 
     <!-- link to css file -->
     <link rel="stylesheet" href="style.css" />
